--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dallia Vuong Le</title>
+    <title>THIS IS THE TITLE</title>
 </head>
 <body>
-    Hello World 
+    Hello hgvjutvg
 </body>
 </html>
