--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <nav class="navbar navbar-dark bg-dark">
     <!--STEP 3:  ADD A DARK NAVBAR HERE WITH YOUR NAME IN THE TOP LEFT.  
         Also, create a link in the navbar TO the HTML file that you made in the HTML assessment -->
+        <div class="navbar-header">
+          <a class="navbar-brand" href=" ">Dallia Vuong Le</a>
+        </div>
 
     </nav>
 
