--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!--STEP 3:  ADD A DARK NAVBAR HERE WITH YOUR NAME IN THE TOP LEFT.  
         Also, create a link in the navbar TO the HTML file that you made in the HTML assessment -->
         <div class="navbar-header">
-          <a class="navbar-brand" href=" ">Dallia Vuong Le</a>
+          <a class="navbar-brand" href="htmlassessment.html">Dallia Vuong Le</a>
         </div>
 
     </nav>
