--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
 
     </nav>
 
-    <div>
+    <div class="firstdiv">
       <!-- Add a class with custom styling to this div -->
       
+
+
 
     </div>
 
