--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
     <div class="firstdiv">
       <!-- Add a class with custom styling to this div -->
-      
-
+      <h1>The Witcher Nightmare of the Wolf</h1>
+      <p>Netflix recently came out with "The Witcher Nightmare of the Wolf"</p>
 
 
     </div>
