--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
     <div class="firstdiv">
       <!-- Add a class with custom styling to this div -->
-      <h1>The Witcher Nightmare of the Wolf</h1>
-      <p>Netflix recently came out with "The Witcher Nightmare of the Wolf"</p>
+      <h1 class="firstHead">  <center>The Witcher Nightmare of the Wolf</center>  </h1>
+      <p class="myclass" ><center>Netflix recently came out with "The Witcher Nightmare of the Wolf"</center> </p>
 
 
     </div>
