--- a/index.html
+++ b/index.html
@@ -33,29 +33,91 @@
     <div class="firstdiv">
       <!-- Add a class with custom styling to this div -->
       <h1 class="firstHead">  <center>The Witcher Nightmare of the Wolf</center>  </h1>
-      <p class="myclass" ><center>Netflix recently came out with "The Witcher Nightmare of the Wolf"</center> </p>
+      <p class="myclass" >Netflix recently came out with "The Witcher Nightmare of the Wolf" </p>
 
 
     </div>
 
-    <div>
+    <div class="firstdiv">
       <!-- Add the same class as before to apply the same styling to this div.
            ALSO add an id to this div to apply something unique. -->
+
+           <p id="firstId" >Netflix recently came out with "The Witcher Nightmare of the Wolf" </p>
     </div>
 
     <!-- STEP 4: CREATE A PHOTO CAROUSEL HERE -->
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="https://images.unsplash.com/photo-1567163056522-a05057f4d719?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTd8fHdvbHZlc3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1560&q=80" class="d-block w-100" alt="...">
+        </div>
+
+        <div class="carousel-item">
+          <img src="https://images.unsplash.com/photo-1583589264978-d440c84bd017?ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8d29sdmVzfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1560&q=80" alt="...">
+        </div>
+
+        <div class="carousel-item">
+          <img src="https://images.unsplash.com/photo-1545906785-38f53f99e380?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8d29sdmVzfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1560&q=80" class="d-block w-100" alt="...">
+        </div>
+
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
 
     <!-- STEP 5: ADD Bootstrap styling to the table below so it has striped rows 
          and a header row and add at least three more rows. Feel free to change the text.-->
+         <table class="table table-dark">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">First Name</th>
+              <th scope="col">Favorite color</th>
+              <th scope="col">Initials</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">1</th>
+              <td>Tina</td>
+              <td>Blue</td>
+              <td>T.J</td>
+            </tr>
+            <tr>
+              <th scope="row">2</th>
+              <td>Sam</td>
+              <td>Red</td>
+              <td>S.K.L</td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td>Marryanne</td>
+              <td>Orange</td>
+              <td>M.F.S</td>
+            </tr>
+          </tbody>
+        </table>
 
-    <table>
+    <!-- <table>
       <th>
         <td>A Person's Name</td><td>Their Fav Animal that starts with the first letter of their first name</td><td># of toes that animal has</td>
       </th>
       <tr>
         <td></td><td></td><td></td>
       </tr>
-    </table>
+    </table> -->
 
   </body>
 </html>
