--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     <!-- STEP 5: ADD Bootstrap styling to the table below so it has striped rows 
          and a header row and add at least three more rows. Feel free to change the text.-->
-         <table class="table table-dark">
+         <table class="table table-striped table-dark">
           <thead>
             <tr>
               <th scope="col">#</th>
