--- a/index.html
+++ b/index.html
@@ -53,6 +53,29 @@
         </div>
       </div>
     </nav>
+    <!--Text Cards 1-->
+    <div class="card" style="width: 18rem;">
+      <img src="..." class="card-img-top" alt="Image unavalible">
+      <div class="card-body">
+        <p class="card-text">During my sophomore year of highschool, I took AP Computer Science Principles, which teaches students the basics of coding, and the concepts. Such as, fuctions, modules, and screen design.</p>
+      </div>
+    </div>
+    <!--Text Cards 2-->
+    <div class="card" style="width: 18rem;">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+    </div>
+    <!--Text Cards 3-->
+    <div class="card" style="width: 18rem;">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+    </div>
+
+
   
 
   </body>
