--- a/index.html
+++ b/index.html
@@ -55,23 +55,23 @@
     </nav>
     <!--Text Cards 1-->
     <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="Image unavalible">
+      <img src="https://aws1.discourse-cdn.com/business6/uploads/codeorgforum/optimized/2X/b/b42d05e71936513491e3630d25c51e927ff0a03a_2_1024x576.png" class="card-img-top" alt="Image unavalible">
       <div class="card-body">
         <p class="card-text">During my sophomore year of highschool, I took AP Computer Science Principles, which teaches students the basics of coding, and the concepts. Such as, fuctions, modules, and screen design.</p>
       </div>
     </div>
     <!--Text Cards 2-->
     <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="https://www.filepicker.io/api/file/2FUfYl4DTyauv7723l5L" class="card-img-top" alt="Image does not exist">
       <div class="card-body">
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="card-text"> Intro to Programming, is a dual enrollment class, that I am taking during my senior year. We are learning python, and how to create basic functions./p>
       </div>
     </div>
     <!--Text Cards 3-->
     <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="https://miro.medium.com/max/1838/1*VwsiXJDNMkgCt5sJgn9Gxw.png" class="card-img-top" alt="Image does not exist">
       <div class="card-body">
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="card-text">Senior Capstone, is a computer sceince class that will aid you in your senior project. I have learned CSS, Html, and tools like bootstrap.</p>
       </div>
     </div>
 
