--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
          <link rel="stylesheet" href="style2.css">
   </head>
   <body> 
+   <!--Nav Bar-->
     </nav>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
@@ -53,30 +54,87 @@
         </div>
       </div>
     </nav>
-    <!--Text Cards 1-->
-    <div class="card" style="width: 18rem;">
-      <img src="https://aws1.discourse-cdn.com/business6/uploads/codeorgforum/optimized/2X/b/b42d05e71936513491e3630d25c51e927ff0a03a_2_1024x576.png" class="card-img-top" alt="Image unavalible">
-      <div class="card-body">
-        <p class="card-text">During my sophomore year of highschool, I took AP Computer Science Principles, which teaches students the basics of coding, and the concepts. Such as, fuctions, modules, and screen design.</p>
+
+    <!--Introduction Paragraph-->
+    <p>Hello there, my name is Dallia. Currently I am a senior attending Oakland Technical High School. I am 17 years old, I like to eat tacos, and read books (but I'll get more into detail about that later).</p>
+
+    <!--Card 1-->
+    <div class="card-group">
+      <div class="card">
+        <img class="card-img-top" src="https://aws1.discourse-cdn.com/business6/uploads/codeorgforum/optimized/2X/b/b42d05e71936513491e3630d25c51e927ff0a03a_2_1024x576.png" class="card-img-top" alt="Image unavalible" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">AP Computer Science Principles</h5>
+          <p class="card-text">During my sophomore year of highschool, I took AP Computer Science Principles, which teaches students the basics of coding, and the concepts. Such as, fuctions, modules, and screen design.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
       </div>
-    </div>
-    <!--Text Cards 2-->
-    <div class="card" style="width: 18rem;">
-      <img src="https://www.filepicker.io/api/file/2FUfYl4DTyauv7723l5L" class="card-img-top" alt="Image does not exist">
-      <div class="card-body">
-        <p class="card-text"> Intro to Programming, is a dual enrollment class, that I am taking during my senior year. We are learning python, and how to create basic functions./p>
+      <!--Card 2-->
+      <div class="card">
+        <img class="card-img-top" src="https://www.filepicker.io/api/file/2FUfYl4DTyauv7723l5L" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Intro to Programming</h5>
+          <p class="card-text">Intro to Programming, is a dual enrollment class, that I am taking during my senior year. We are learning python, and how to create basic functions</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
       </div>
-    </div>
-    <!--Text Cards 3-->
-    <div class="card" style="width: 18rem;">
-      <img src="https://miro.medium.com/max/1838/1*VwsiXJDNMkgCt5sJgn9Gxw.png" class="card-img-top" alt="Image does not exist">
-      <div class="card-body">
-        <p class="card-text">Senior Capstone, is a computer sceince class that will aid you in your senior project. I have learned CSS, Html, and tools like bootstrap.</p>
+      <!--Card 3-->
+      <div class="card">
+        <img class="card-img-top" src="https://miro.medium.com/max/1838/1*VwsiXJDNMkgCt5sJgn9Gxw.png" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Senior Capstone</h5>
+          <p class="card-text">Senior Capstone, is a computer sceince class that will aid you in your senior project. I have learned CSS, Html, and tools like bootstrap.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
       </div>
     </div>
 
+    <!--Carousel Picture-->
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
 
-  
+      <!--Paragraph 2, brief intro on hobbies-->
+      <p>Below are some pictures, that describe some of my hobbies</p>
+
+
+      <!--Slide 1-->
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="https://www.themoviedb.org/t/p/w780/epeKkcetNXp6s4J4iRHpe92ahCN.jpg" class="d-block w-100" alt="No Image">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Favorite Show</h5>
+            <p>My favorite anime is Vinland Saga</p>
+          </div>
+        </div>
+        <!--Slide 2-->
+        <div class="carousel-item">
+          <img src="https://t3.ftcdn.net/jpg/02/57/93/32/360_F_257933258_0hXTabHS5zQXVANL36mCuU4sddkw7ELy.jpg" class="d-block w-100" alt="No Image">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Second slide label</h5>
+            <p>Some representative placeholder content for the second slide.</p>
+          </div>
+        </div>
+        <!--Slide 3-->
+        <div class="carousel-item">
+          <img src="..." class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Third slide label</h5>
+            <p>Some representative placeholder content for the third slide.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
 
   </body>
 </html>
