--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
       </form>
     </div>
   </nav>
-
-    <!--Introduction Paragraph-->
-    <p>Hello there, my name is Dallia. Currently I am a senior attending Oakland Technical High School. I am 17 years old, I like to eat tacos, and read books (but I'll get more into detail about that later).</p>
+  
+    <!--Introduction-->
+    <p id = "p1">Hello there, my name is Dallia. Currently I am a senior attending Oakland Technical High School. I am 17 years old, I like to eat tacos, and read books (but I'll get more into detail about that later).</p>
 
     <!--Card 1-->
     <div class="card-group">
