--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </div>
 
     <!--Paragraph 2, about some of my hobbies-->
-    <p>Below is a picture and description of some of my hobbies. If you read, and looked through everything on the homepage, then click the quiz button.</p>
+    <p id = "p2">Below is a picture and description of some of my hobbies. If you read, and looked through everything on the homepage, then click the quiz button.</p>
 
     <!--Quiz Button-->
     <button type="button" class="btn btn-primary btn-lg">Quiz</button>
