--- a/test.html
+++ b/test.html
@@ -16,7 +16,7 @@ page that contains all the code you need for a new page.-->
   <div data-include="nav"></div>
   <!--Whole page container div-->
   <div class="container">
-
+test page
 
 
   </div>
