--- a/bootstrap.html
+++ b/bootstrap.html
@@ -39,7 +39,7 @@
             <a class="dropdown-item" href="#">Hobbies</a>
             <a class="dropdown-item" href="#">Books I read, and why</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href="test.html">Quiz</a>
           </div>
         </li>
         <li class="nav-item">
