--- a/test.html
+++ b/test.html
@@ -21,7 +21,7 @@ page that contains all the code you need for a new page.-->
 
   <form>
     <p>What is a class I am taking during my senior year?</p>
-    <label for="yes">Yes:</label>
+    <label for="yes">Chemistry:</label>
     <input type="radio" id="yes" name="me1" value="yes">
 
     <label for="no">No:</label>
