--- a/test.html
+++ b/test.html
@@ -10,45 +10,56 @@ page that contains all the code you need for a new page.-->
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   <title>OT CS Capstone</title>
+  <link rel="stylesheet" href="style2.css">
 </head>
 <body>
   <!--Navbar-->
   <div data-include="nav"></div>
   <!--Whole page container div-->
-  <div class="container">
-   Quiz about me
-  </div>
+  <h1 class="quiz">Quiz about me</h1>
 
-  <form>
-    <p>What is a class I am taking during my senior year?</p>
-    <label for="yes">Chemistry:</label>
-    <input type="radio" id="yes" name="me1" value="yes">
+  <form class="quizz">
+    <!--First question-->
+    <p>What is the class I am taking during my senior year?</p>
+    <label for="class1">Chemistry: </label>
+    <input type="radio" id="class1" name="me1" value="class1">
 
-    <label for="no">No:</label>
-    <input type="radio" id="no" name="me1" value="no">
+    <label for="class2">Senior Capstone: </label>
+    <input type="radio" id="class2" name="me1" value="class2">
 
+    <label for="class3">Statistics: </label>
+    <input type="radio" id="class3" name="me1" value="class3">
+
+    <!--Second question-->
     <p>What is a hobby that I mentioned on the carousel slide?</p>
-    <label for="yes">Yes:</label>
-    <input type="radio" id="yes" name="ques2" value="yes">
+    <label for="hob1">Traveling:</label>
+    <input type="radio" id="hob1" name="ques2" value="hob1">
 
-    <label for="no">No:</label>
-    <input type="radio" id="no" name="ques2" value="no">
+    <label for="hob2">Collecting rocks:</label>
+    <input type="radio" id="hob2" name="ques2" value="hob2">
 
-    <p>Could you handle killing monsters for the rest of your life?</p>
-    <label for="yes">Yes:</label>
-    <input type="radio" id="yes" name="ques3" value="yes">
+    <label for="hob3">Hiking:  </label>
+    <input type="radio" id="hob3" name="ques2" value="hob3">
 
-    <label for="no">No:</label>
-    <input type="radio" id="no" name="ques3" value="no">
+    <!--Thrid Question-->
+    <p>Which one is my favorite show?</p>
+    <label for="sh1">Witcher:</label>
+    <input type="radio" id="sh1" name="ques3" value="sh1">
 
-    <p>Did you say yes or no to all the questions?</p>
+    <label for="sh2">Vinland Saga:</label>
+    <input type="radio" id="sh2" name="ques3" value="sh2">
+
+    <label for="sh3">Squid Game: </label>
+    <input type="radio" id="sh3" name="ques3" value="sh3">
+
+    <p>Do you think you got all the question right?</p>
 
     <select name="witchy">
-        <option value="yes">Yup, I'm now a Witcher</option>
-        <option value="no">Nope, I'm not devoting my life do that</option>
+        <option value="yes">Yup</option>
+        <option value="no">Nope</option>
     </select>
 
-    <label for="firstnametag">Terrific! You're a Witcher, put down your name so we remember you:</label>
+    <label for="firstnametag">Terrific! You finished the quiz, put down your name so we remember you:</label>
     <input id = "firstnametag" type="name" name="first name" placeholder="first name Here">
 
     <br>
