--- a/bootstrap.html
+++ b/bootstrap.html
@@ -37,7 +37,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="#">Hobbies</a>
-            <a class="dropdown-item" href="#">Books I read, and why</a>
+            <a class="dropdown-item" href="hobbypage.html">Books I read, and why</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="test.html">Quiz</a>
           </div>
@@ -90,7 +90,8 @@
     <p id = "p2">Below is a picture and description of some of my hobbies. If you read, and looked through everything on the homepage, then click the quiz button.</p>
 
     <!--Quiz Button-->
-    <button type="button" class="btn btn-primary btn-lg">Quiz</button>
+    <form action="get" action="test.html"><button type="button" class="btn btn-primary btn-lg" >Quiz</button></form>
+  
 
     <!--Carousel-->
     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
