--- a/bootstrap.html
+++ b/bootstrap.html
@@ -90,7 +90,9 @@
     <p id = "p2">Below is a picture and description of some of my hobbies. If you read, and looked through everything on the homepage, then click the quiz button.</p>
 
     <!--Quiz Button-->
-    <form action="get" action="test.html"><button type="button" class="btn btn-primary btn-lg" >Quiz</button></form>
+    <form action="get" ><button type="button" class="btn btn-primary btn-lg" >Quiz</button> 
+      <a href="test.html"></a>
+    </form>
   
 
     <!--Carousel-->
