--- a/bootstrap.html
+++ b/bootstrap.html
@@ -36,8 +36,8 @@
             Dropdown
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Hobbies</a>
-            <a class="dropdown-item" href="hobbypage.html">Books I read, and why</a>
+            <a class="dropdown-item" href="hobbypage.html">Hobbies</a>
+            <a class="dropdown-item" href="#">Books I read, and why</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="test.html">Quiz</a>
           </div>
@@ -90,8 +90,10 @@
     <p id = "p2">Below is a picture and description of some of my hobbies. If you read, and looked through everything on the homepage, then click the quiz button.</p>
 
     <!--Quiz Button-->
-    <form action="get" ><button type="button" class="btn btn-primary btn-lg" >Quiz</button> 
-      <a href="test.html"></a>
+    <form action="get" >
+      <a href="test.html" type="button" class="btn btn-primary btn-lg">
+        Quiz
+      </a>
     </form>
   
 
