--- a/hobbypage.html
+++ b/hobbypage.html
@@ -24,14 +24,15 @@ page that contains all the code you need for a new page.-->
        <ul>
            <li> During the spring season, many animals such as deer, butterflies, squirrels. I like to see the colorful flowers, and how much they have grown</li>
        </ul>   
-       
+
       <li>Scenery </li>
       <ul>
           <li>Watching the sunset on a hillside is calming, espically when there is a calm gust of wind.</li>
       </ul>
 
   </ol>
-
+<h2>Reading</h2>
+<p>I did not like to read as a child, but slowly grew to love this </p>
 
 
   </div>
