--- a/hobbypage.html
+++ b/hobbypage.html
@@ -10,6 +10,7 @@ page that contains all the code you need for a new page.-->
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   <title>OT CS Capstone</title>
+  <link rel="stylesheet" href="style2.css">
 </head>
 <body>
   <!--Navbar-->
@@ -17,22 +18,14 @@ page that contains all the code you need for a new page.-->
   <!--Whole page container div-->
   <div class="container">
     <h1 class="hobbies">My hobbies</h1>
-    <h2>Hiking</h2>
-    <p>I like to hike with friends or alone, particulary during the evening when it is serene, I like to observe...</p>
-    <ol>
-      <li>Plants and Animals</li>
-       <ul>
-           <li> During the spring season, many animals such as deer, butterflies, squirrels. I like to see the colorful flowers, and how much they have grown</li>
-       </ul>   
+    <h2 class= "divsinhobs">Hiking</h2>
+    <p>I like to hike with friends or alone, particulary during the evening when it is serene, I like to observe the plants and animals. During the spring season, many animals such as deer, butterflies, squirrels. I like to see the colorful flowers, and how much they have grown. I also like to observe the scenery, watching the sunset on a hillside is calming, espically when there is a calm gust of wind.</p>
+    
+  <h2 class= "divsinhobs">Shows</h2>
+  <p>During my free time, I enjoy watching shows specifically anime's, animal documentaries, and fantasy shows. One of my favortie shows at the moment is called "The Witcher" which is about someone (orphaned boys) who have trained mentally and physically for years, learned alchemy, learned monster hunting, and finally mutated through a series of inhumane experiments that make them powerful magic users and assassins. Although they kill monsters, they are veiwed as bad since they are "mutants" that have the ability to easily kill a person. I also enjoy watching an anime called "Vinland Saga", which takes place in 1013 AD, following a boy who lives in Iceland, further along he witnesses his father being killed, which sends him into a spriral of revenge, and anger. However, as the boy, or Thorfinn, grows up he learns how to grieve, and realize that revenge is a fools game. </p>
 
-      <li>Scenery </li>
-      <ul>
-          <li>Watching the sunset on a hillside is calming, espically when there is a calm gust of wind.</li>
-      </ul>
-
-  </ol>
-<h2>Reading</h2>
-<p>I did not like to read as a child, but slowly grew to love this </p>
+  <h2 class= "divsinhobs">Reading</h2>
+<p>I did not like to read as a child, but slowly grew to love this hobby. I would read multiple books a month, which ranged from 250 pages to 450 pages. My favorite genre is fantasy, action, and mystery. My favorite books are "Outliers", "Onyx and Ivory", and "Shadow and Flame". Some reason as why I like to read is that it can improve your grammar, as well as your speaking skills. Ever since I started reading I noticed an improvement my speaking skills improving.</p>
 
 
   </div>
