--- a/test.html
+++ b/test.html
@@ -65,7 +65,10 @@ page that contains all the code you need for a new page.-->
     <br>
     <br>
 
-    <input type="Submit" value="Click to submit your quiz">
+    <!--Results button-->
+      <a href="results.html" type="button" class="btn btn-primary btn-lg">
+        Click here to receive the results
+      </a>
     
     </form>
   <!--Bootstrap and other JS scripts-->
