--- a/hobbypage.html
+++ b/hobbypage.html
@@ -24,8 +24,8 @@ page that contains all the code you need for a new page.-->
   <h2 class= "divsinhobs">Shows</h2>
   <p>During my free time, I enjoy watching shows specifically anime's, animal documentaries, and fantasy shows. One of my favortie shows at the moment is called "The Witcher" which is about someone (orphaned boys) who have trained mentally and physically for years, learned alchemy, learned monster hunting, and finally mutated through a series of inhumane experiments that make them powerful magic users and assassins. Although they kill monsters, they are veiwed as bad since they are "mutants" that have the ability to easily kill a person. I also enjoy watching an anime called "Vinland Saga", which takes place in 1013 AD, following a boy who lives in Iceland, further along he witnesses his father being killed, which sends him into a spriral of revenge, and anger. However, as the boy, or Thorfinn, grows up he learns how to grieve, and realize that revenge is a fools game. </p>
 
-  <h2 class= "divsinhobs">Reading</h2>
-<p>I did not like to read as a child, but slowly grew to love this hobby. I would read multiple books a month, which ranged from 250 pages to 450 pages. My favorite genre is fantasy, action, and mystery. My favorite books are "Outliers", "Onyx and Ivory", and "Shadow and Flame". Some reason as why I like to read is that it can improve your grammar, as well as your speaking skills. Ever since I started reading I noticed an improvement my speaking skills improving.</p>
+  <h2 class= "divsinhobs"> Reading</h2>
+<p>I did not like to read as a child, but slowly grew to love this hobby. I would read multiple books a month, which ranged from 250 pages to 450 pages. My favorite genre is fantasy, action, and mystery. My favorite books are "Outliers", "Onyx and Ivory", and "Shadow and Flame". Some reason as why I like to read is that it can improve your grammar, as well as your speaking skills. Ever since I started reading I noticed an improvement my speaking skills improving.To know more about the books I like reading, click <a href="bookpage.html">here</a>.</p>
 
 
   </div>
