--- a/bookpage.html
+++ b/bookpage.html
@@ -7,6 +7,10 @@
     <title>Books I like to read, and why</title>
 </head>
 <body>
-    
+    <h1 class = "books"> Books I Recommend</h1>
+    <p>I read many books from these genres, fantasy, historical fiction, and self-help. Some books I recommend is "Game of Thrones", "The Revenant", and "Outliers"</p>
+
+    <h2>"Game of Thrones" by George R.R. Martin</h2>
+    <p>Filled with various cutltures, and history from differetn regions, and even animals. Martin has the ability to create various creatures, stories within stories, and realistic </p>
 </body>
 </html>
