--- a/bookpage.html
+++ b/bookpage.html
@@ -16,24 +16,37 @@
   <div class="container">
 
 
-  </div>
+  </div class="background">
   <!--Bootstrap and other JS scripts-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="scripts/scripts.js"></script>
 
+    <div>
     <h1 class="booktitle">Books I recommend</h1>
     <p id="bookpar">I read many books in the genre of fantasy, historical fiction, and self-help. Fantasy has always been interesting to me because it brings me to another world filled with different cultures, problems, and creatures. Historical fiction, I like that I am very close to the culture, and problems, meaning I live in the country, state, or even the planet. I have just started getting into books about self-help, books revolivng around observing others, animals, and cultures is quite interesting. If you're intestested in fantasy I recommend "Game of Thrones" by George R.R. Martin, historical fiction "The Revenant" by Micheal Punke, self-help "Outliers" by Malcolm Gladwell. </p>
-
+     
+    
     <h2 class="book2">"Game of Thrones" by George R.R. Martin</h2>
     <p id="bookpar">"Game of Thrones" manages to introduce a world filled with many culture, people, and houses. Martin has the ability to write deep history about each person he introduces, and is able to create many twists, and turns within the book. The book revolves around many people, who aim to hold high power, and their challenges in obtaining it.</p>
+
+    <!--Image in a div-->
+    <div class="bookdiv1">
+    <img src="https://images-na.ssl-images-amazon.com/images/I/91dSMhdIzTL.jpg" width= "300" height="400" alt="No Image">
+    </div>
 
     <h2 class="book2">"The Revenant" by Micheal Punke</h2>
     <p id="bookpar">It’s currently 1823 in America, a group of fur tradesmen from the Rocky Mountain Fur Company must trek across the snow barren land. Among the is Hugh Glass, known for his expertise in tracking and traveling through the uncharted parts of America. The trip is uneventful until Glass gets mauled by a bear. Though Glass immediately receives aid from his group. He is immediately abandoned due to fear of being attacked by neighboring Indian tribes. Left abandoned, and physically wounded, with a thirst of revenge, Glass is determined to trek the uncharted parts of America in the harsh weather alone. Glass crawls hundreds of miles for months, in order to find the men that abandoned him. As time passes Glass is healed, and learns to forgive the two men that abandoned him. I like this book because it hold a lesson that revenge is a fools game.</p>
 
+    <!--Second div-->
+   <div class="bookdiv2"> <img src="https://m.media-amazon.com/images/M/MV5BMDE5OWMzM2QtOTU2ZS00NzAyLWI2MDEtOTRlYjIxZGM0OWRjXkEyXkFqcGdeQXVyODE5NzE3OTE@._V1_.jpg" height="400"alt="No Image"></div>
+
     <h2 class="book2">"Outliers" by Micheal Punke</h2>
     <p id="bookpar">Though the book revolves around different subjects Gladwell has the ability to tie them together. Some interesting situations he mentions in the books such as why Asians are known to be good at math due to their logical language system, how social culture (specifically Korean culture) can affect an individual's thoughts, and how anyone could master a skill if they spend 10,000 hours. I was assigned this book over the summer, I slowly became interested with how Gladwell explains phenomenons, and with my own free will, managed to finish the book within a week.</p>
 
+    <!--Third div-->
+    <div class="bookdiv3"> <img src="https://ae01.alicdn.com/kf/H5e89eadc0efb498286decfe3bd7a056fd/Outliers-The-Story-of-Success-By-Malcolm-Gladwell-In-English-Self-management-Success-Psychology-Popular-Reading.jpg_Q90.jpg_.webp" width="400" height="400"alt="No Image"></div>
 
+    </div>
 </body>
 </html>
