--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   <title>OT CS Capstone</title>
+  <link rel="stylesheet" href="style2.css">
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 </head>
+
 <body>
   <div data-include="nav"></div>
   <div class="container">
@@ -19,7 +23,7 @@
     <script type="text/javascript" src="scripts/scripts.js"></script>
       
     <!--Introduction-->
-    <p id = "p1">Hello there, my name is Dallia. Currently I am a senior attending Oakland Technical High School. I am 17 years old, I like to eat tacos, and read books (but I'll get more into detail about that later).</p>
+    <p id = "p1">Hello there, my name is Dallia. Currently I am a senior attending Oakland Technical High School. I am 17 years old, I like to eat tacos, and read books (but I'll get more into detail about that later). Below are the classes I took in the past, and I am currently taking</p>
 
     <!--Card 1-->
     <div class="card-group">
