--- a/index.html
+++ b/index.html
@@ -59,12 +59,13 @@
     <p id = "p2">Below is a picture and description of some of my hobbies. If you read, and looked through everything on the homepage, then click the quiz button.</p>
 
     <!--Quiz Button-->
+    <div class="quizbutton">
     <form action="get" >
       <a href="test.html" type="button" class="btn btn-primary btn-lg">
         Quiz
       </a>
     </form>
-  
+    </div>
 
     <!--Carousel-->
     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
