--- a/test.html
+++ b/test.html
@@ -16,7 +16,7 @@ page that contains all the code you need for a new page.-->
   <!--Navbar-->
   <div data-include="nav"></div>
   <!--Whole page container div-->
-  <h1 class="quiz">Quiz about me</h1>
+  <h1 class="quiz">Test about me</h1>
 
   <form class="quizz">
     <!--First question-->
@@ -59,7 +59,7 @@ page that contains all the code you need for a new page.-->
         <option value="no">Nope</option>
     </select>
 
-    <label for="firstnametag">Terrific! You finished the quiz, put down your name so we remember you:</label>
+    <label for="firstnametag">Terrific! You finished the test, put down your name so we remember you:</label>
     <input id = "firstnametag" type="name" name="first name" placeholder="first name Here">
 
     <br>
