--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script type="text/javascript" src="scripts/scripts.js"></script>
       
     <!--Introduction-->
+    <h1 class="introtitle">About the author</h1>
     <p id = "p1">Hello there, my name is Dallia. Currently I am a senior attending Oakland Technical High School. I am 17 years old, I like to eat tacos, and read books (but I'll get more into detail about that later). Below are the classes I took in the past, and I am currently taking</p>
 
     <!--Card 1-->
