--- a/test.html
+++ b/test.html
@@ -16,7 +16,7 @@ page that contains all the code you need for a new page.-->
   <!--Navbar-->
   <div data-include="nav"></div>
   <!--Whole page container div-->
-  <div class="container fluid">
+  <div class="container-fluid">
   <h1 class="quiz">Test about me</h1>
 
   <form class="quizz">
