--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <div data-include="nav"></div>
-  <div class="container">
+  <div class="container-fluid px5 introductionbackgroundcolor">
   
   
   <!--Bootstrap and other JS scripts-->
