--- a/results.html
+++ b/results.html
@@ -15,9 +15,9 @@ page that contains all the code you need for a new page.-->
 <body>
   <!--Navbar-->
   <div data-include="nav"></div>
-  
+
   <!--Whole page container div-->
-  <div class="container">
+  <div class="container-fluid px5 resultsbackgroundcolor">
  <!--Congratulations-->
  <h1 class="results1">Yay!</h1>
  <p id= "results1"> You scored 100% on the quiz, meaning you got all the right answer. Hurray for knowing a lot about me.</p>
