--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
       <!--Card 3-->
       <div class="card">
-        <img class="card-img-top" src="https://miro.medium.com/max/1838/1*VwsiXJDNMkgCt5sJgn9Gxw.png" alt="Card image cap">
+        <img class="card-img-top" src="https://miro.medium.com/max/1838/1*VwsiXJDNMkgCt5sJgn9Gxw.png" height="261" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Senior Capstone</h5>
           <p class="card-text">Senior Capstone, is a computer sceince class that will aid you in your senior project. I have learned CSS, Html, and tools like bootstrap.</p>
