--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
   <div data-include="nav"></div>
   <div class="container-fluid px5 introductionbackgroundcolor">
+
   
   
   <!--Bootstrap and other JS scripts-->
@@ -57,17 +58,11 @@
     </div>
 
     <!--Paragraph 2, about some of my hobbies-->
-    <p id = "p2">Below is a picture and description of some of my hobbies. If you read, and looked through everything on the homepage, then click the quiz button.</p>
+    <p id = "p2">Below is a picture and description of some of my hobbies.</p>
 
-    
-    <!--Quiz Button-->
-    <div class="quizbutton">
-    <form action="get" >
-      <a href="test.html" type="button" class="btn btn-primary btn-lg">
-        Quiz
-      </a>
-    </form>
-    </div>
+  
+  
+  
 
     <!--Carousel-->
     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
