--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       
     <!--Introduction-->
     <h1 class="introtitle">About the author</h1>
-    <p id = "p1">Hello there, my name is Dallia. Currently I am a senior attending Oakland Technical High School. I am 17 years old, I like to eat tacos, and read books (but I'll get more into detail about that later). Below are the classes I took in the past, and I am currently taking</p>
+    <p id = "p1">Hello there, my name is Dallia. Currently I am a senior attending Oakland Technical High School. I am 17 years old, I like to eat tacos, and read books (but I'll get more into detail about that later). Below are the classes I took in the past, and I am currently taking. Makre sure to explore the drop down menu labeled "More pages about me".</p>
 
     <!--Card 1-->
     <div class="card-group">
