--- a/results.html
+++ b/results.html
@@ -19,11 +19,11 @@ page that contains all the code you need for a new page.-->
   <!--Whole page container div-->
   <div class="container-fluid px5 resultsbackgroundcolor">
  <!--Congratulations-->
- <h1 class="results1">Yay!</h1>
- <p id= "results1"> You scored 100% on the quiz, meaning you got all the right answer. Hurray for knowing a lot about me.</p>
+ <h1 class="results1">Thanks!</h1>
+ <p id= "results1"> Thank you for answering my questions, I hope you enjoyed looking through my website, just as I enjoyed making it.</p>
+ <img src="https://media4.giphy.com/media/l3q2wJsC23ikJg9xe/200.webp?cid=ecf05e47zlfie6bvn42k4xkghusp3rt1zmufyhxhrlng2pgx&rid=200.webp&ct=g" alt="No image">
 
- <h1 class="results2">Aw</h1>
- <p id="results2">You got some questions wrong, better luck next time.</p>
+ 
 
 
   </div>
