--- a/results.html
+++ b/results.html
@@ -21,7 +21,10 @@ page that contains all the code you need for a new page.-->
  <!--Congratulations-->
  <h1 class="results1">Thanks!</h1>
  <p id= "results1"> Thank you for answering my questions, I hope you enjoyed looking through my website, just as I enjoyed making it.</p>
- <img src="https://media4.giphy.com/media/l3q2wJsC23ikJg9xe/200.webp?cid=ecf05e47zlfie6bvn42k4xkghusp3rt1zmufyhxhrlng2pgx&rid=200.webp&ct=g" alt="No image">
+
+
+ <img src="https://media4.giphy.com/media/l3q2wJsC23ikJg9xe/200.webp?cid=ecf05e47zlfie6bvn42k4xkghusp3rt1zmufyhxhrlng2pgx&rid=200.webp&ct=g" alt="No image" class="center">
+ 
 
  
 
